--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,6 +24,7 @@
 
 html,
 body {
+  top: 0px !important;
   font-family: 'Roboto Condensed', sans-serif;
   scroll-behavior: smooth;
   background: transparent !important;
@@ -34,6 +35,36 @@ body {
 .test{
   height: 100%;
 }
+body > .skiptranslate {
+  display: none;
+}
+
+.goog-te-banner-frame.skiptranslate {
+  display: none !important;
+}
+.VIpgJd-ZVi9od-l4eHX-hSRGPd{
+  display: none;
+}
+.VIpgJd-ZVi9od-aZ2wEe-wOHMyf-ti6hGc{
+  display: none !important;
+}
+.VIpgJd-ZVi9od-aZ2wEe-wOHMyf{
+  display: none !important;
+}
+.VIpgJd-yAWNEb-L7lbkb {
+  display: none !important;
+}
+.goog-te-banner-frame.skiptranslate, .goog-te-gadget-icon, .goog-te-balloon-frame.skiptranslate {
+      display: none !important;
+    }
+
+    @media print {
+      #google_translate_element {
+        display: none;
+      }
+    }
+
+
 /* *, :before, :after {
   box-sizing: border-box;
   border-width: 0;
@@ -459,6 +490,12 @@ body {
  
 }
 
+
+@media screen and (max-width: 1536px) {
+.evPageImgResponsive img{
+ position: relative !important;
+}
+}
 @media screen and (max-width: 1024px) {
  /* .bgImage{
   padding-left: 10px;
