--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -446,6 +446,16 @@ body > .skiptranslate {
     font-size: 28px;
     margin-bottom: 20px;
 }
+.threedh1Frtee{
+  position: absolute;
+  font-size: 48px;
+  text-transform: uppercase;
+  z-index: 9;
+  padding: 20px;
+  background: #dee2e200;
+  color: #fff;
+}
+
 /* .blogFullImgSingle .img-2 {
   position: absolute;
   left: 0;
@@ -509,6 +519,11 @@ body > .skiptranslate {
   padding-left: 10px;
   padding-right: 10px;
  } */
+.threedh1Frtee{
+  
+  font-size: 28px;
+}
+
   h2,h1{
     line-height: normal;
 
