--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap');
+
 @import "tailwindcss";
 
 @tailwind base;
@@ -265,7 +264,7 @@ body > .skiptranslate {
 
 
 .font-tag-font{
-  font-family: Rubik Doodle Shadow,system-ui;
+  font-family: 'Rubik Doodle Shadow',system-ui;
 }
 /* Blog Background Image */
 .blog-bg-img {
